# cookiecutter-django

./: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt
