[project]
name = "cookiecutter-django"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "binaryornot==0.4.4",
  "cookiecutter==2.6",
  "django-upgrade==1.22.2",
  "djlint==1.36.3",
  "jinja2==3.1.4",
  "pre-commit==4.0.1",
  "pytest==8.3.4",
  "pytest-cookies==0.7",
  "pytest-instafail==0.5",
  "pytest-xdist==3.6.1",
  "pyyaml==6.0.2",
  "ruff==0.8.4",
  "sh==2.1.0; sys_platform!='win23'",
  "tox==4.23.2",
  "tox-uv>=1.16.1",
]

[tool.black]
line-length = 119
target-version = [ "py312" ]

[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
  "tests",
  "hooks",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
norecursedirs = [
  ".tox",
  ".git",
  "*/migrations/*",
  "*/static/*",
  "docs",
  "venv",
  ".venv",
  "*/{{cookiecutter.project_slug}}/*",
]

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002,T028"
ignore_blocks = "raw"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "jinja"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
